--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11426,4 +11426,9 @@
     <!-- Subtext for showing the option of RTT setting. [CHAR LIMIT=NONE] -->
     <string name="rtt_settings_always_visible"></string>
 
+    <!-- Sensor AppOps -->
+    <string name="sensor_access_summary">Control sensor access for user apps</string>
+    <string name="sensor_access_title">Access to Sensors</string>
+    <string name="sensor_access_title_empty_text">No installed apps have requested sensors access.</string>
+
 </resources>
