Special Access: Add an option to administer Sensor access
Accesses the added AppOp for OP_OTHER_SENSORS

Change-Id: I79c0ed4ab97494434edc6c308a8a54bd123c02ee

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11438,4 +11438,9 @@
     <string name="bluetooth_phonebook_access_dialog_title">Allow access to contacts and call log?</string>
     <!-- Bluetooth phonebook permission alert for dialog content [CHAR LIMIT=none] -->
     <string name="bluetooth_phonebook_access_dialog_content">An untrusted Bluetooth device, <xliff:g id="device_name" example="My device">%1$s</xliff:g>, wants to access your contacts and call log. This includes data about incoming and outgoing calls.\n\nYou haven\u2019t connected to <xliff:g id="device_name" example="My device">%2$s</xliff:g> before.</string>
+
+    <!-- Sensor AppOps -->
+    <string name="sensor_access_summary">Control sensor access for user apps</string>
+    <string name="sensor_access_title">Access to Sensors</string>
+    <string name="sensor_access_title_empty_text">No installed apps have requested sensors access.</string>
 </resources>
